--- a/clube-mega-ville/index.html
+++ b/clube-mega-ville/index.html
@@ -9,22 +9,22 @@
 <body>
     <div>
         <h1>Clube Mega Ville</h1>
-        <h2>Um lugar para se divertir e relaxar.</h2>
+        <h2>Um lugar para se divertir e relaxar!</h2>
     </div>
     <div class="secao-banner">
         <img src="img/banner.jpg" alt="Clube Mega Ville">
     </div>
     <div>
-        <p>O clube <span>Mega Ville</span> oferece há mais de 20 anos o melhor local para lazer e diversão. Venha nos visitar um dia e desfrute de todos os serviços que podemos oferecer para você, seus amigos e sua família!</p>
+        <p>O Clube <span>Mega Ville</span> oferece há mais de 20 anos o melhor local para lazer e diversão. Venha nos visitar um dia e desfrute de todos os serviços que podemos oferecer para você, seus amigos e sua família!</p>
         <span class="texto-destaque">Venha e agende uma visita!</span>
     </div>
     <div class="secao-conteudo">
         <img src="img/piscinas.jpg" alt="Piscinas do clube">
         <h3>Piscinas de todos os tamanhos</h3>
-        <p>No Mega Ville temos piscina para todos os públicos. São mais de <span>15 piscinas</span> dos tamanhos mais variados para receber os nossos clientes.</p>
+        <p>No Mega Ville temos piscina para todos os públicos. São mais de <span>15 piscinas</span> dos tamanhos mais variados para receber todos os nossos clientes.</p>
         <img src="img/areas-cobertas.jpg" alt="Áreas cobertas">
         <h3>Mais de 30 áreas cobertas</h3>
-        <p>Temos áreas cobertas espalhadas por todo o clube, e cada uma delas para a uma certa finalidade. O que você precisar poderá fazer aqui.</p>
+        <p>Temos áreas cobertas espalhadas por todo o clube, e cada uma delas para uma certa finalidade. O que você precisar, poderá fazer aqui!</p>
         <img src="img/area-criancas.jpg" alt="Área para crianças">
         <h3>Área exclusiva para crianças</h3>
         <p>As crianças têm um espaço <span>amplo</span> e <span>seguro</span> para desfrutar. Contamos com uma equipe que cobre toda a área monitorando as atividades no local.</p>
